<?xml version="1.0"?>
<package format="2">
  <name>iiwaPy-master</name>
  <version>0.0.0</version>
  <description>The iiwaPy-master package</description>
  <maintainer email="jl17783@bristol.ac.uk">joe louca</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>sys</depend>
  <depend>socket</depend>
  <depend>time</depend>
  <depend>io</depend>
  <depend>math</depend>
  <depend>datetime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>matplotlib</depend>
  <depend>numpy</depend>
  
</package>
